--- a/project 2.0 .css
+++ b/project 2.0 .css
@@ -2,7 +2,8 @@
 * {
   padding: 0;
   margin: 0;
-  border: 0; }
+  border: 0;
+  -webkit-tap-highlight-color: transparent;}
 
 *, *:before, *:after {
   -moz-box-sizing: border-box;
